Fix button margin on Safari

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -38,6 +38,7 @@ header {
     right: 0;
     height: 48px;
     padding: 15px;
+    margin: 0;
     // width: 48px;
     border: none;
     font-size: 16px;
